updated using position

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
     justify-content: space-between;
     border-bottom: solid black 1px;
     gap: 10px;
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    z-index: 1;
 
 }
 .navbar__s1__title{
@@ -23,11 +27,13 @@ body{
     width: 60%;
     display: flex;
     gap: 10px;
+    background-color: white;
 }
 .navbar__s2 input{
     border: none;
     width: 100%;
     font-size: 100%;
+    background-color: transparent;
 
 }
 .navbar__s2 input:focus{
@@ -37,6 +43,30 @@ body{
     display: flex;
     gap: 10px;
 }
+/* My Learning popup */
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0px;
+    display: none;
+
+}
+.mylearning:hover .mylearning__popup{
+    display: block;
+}
+
+
+
+
 .Categories{
     display: flex;
     padding: 10px;
@@ -50,8 +80,23 @@ body{
     padding: 10px;
     border-radius: 30px;
 }
-.sale-img img{
+
+.sale-image{
+    position: relative;
+}
+.sale-image img{
     width: 100%;
+}
+.sale-image__offer{
+    width: 35%;
+    border: solid black 2px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 10%;
+    left: 5%;
+
+
 }
 .Recommended{
     padding: 10px;
